objects/SPC_Product__c/SPC_Product__c.object-meta.xml
<CustomObject>
    <label>SPC Product</label>
    <nameField>
        <label>SPC Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPC Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>