objects/SPC_Product__c/fields/EPC_Operating_Family_ID__c.field-meta.xml
<CustomField>
    <fullName>EPC_Operating_Family_ID__c</fullName>
    <label>EPC Operating Family ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>