objects/SPC_Product__c/fields/Is_Ancillary_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Ancillary_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ancillary Product</label>
    <type>Checkbox</type>
</CustomField>