objects/SPC_Product__c/fields/Provisioning_Product__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provisioning Product</label>
    <referenceTo>Provisioning_Product__c</referenceTo>
    <relationshipLabel>SPC Products</relationshipLabel>
    <relationshipName>SPC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>