objects/SPC_Product__c/fields/SalesProductExternalID__c.field-meta.xml
<CustomField>
    <fullName>SalesProductExternalID__c</fullName>
    <externalId>true</externalId>
    <label>SalesProductExternalID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>