objects/SPC_Product__c/fields/Strategic_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Product_Group__c</fullName>
    <label>Strategic Product Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>