objects/SPC_Product__c/fields/Z_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Z_Location_Type__c</fullName>
    <label>Z Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Service Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>